# insightface

recognition/arcface_torch/: fine-tuning.ipynb  pyproject.toml
recognition/arcface_torch/configs/: icartoonface_r50_onegpu.py
recognition/arcface_torch/eval/: verify_v2.py
